examples/error/hierachical_modelling/paraHRefPPError/error-HTMLXPATH.errorOutput
<span class="MBXMLUTILS_ERROROUTPUT"><a href="submodel/Untergruppe.param.xml?xpath=/{http://www.mbsim-env.de/MBXMLUtils}Parameter[1]/{http://www.mbsim-env.de/MBXMLUtils}scalarParameter[2]&amp;line=3">submodel/Untergruppe.param.xml:3:/p:Parameter[1]/p:scalarParameter[2]</a>:<br/><span class="MBXMLUTILS_MSG">Caught octave exception 'mfmf' undefined near line 1, column 1
</span></span><span class="MBXMLUTILS_ERROROUTPUT MBXMLUTILS_SSE"><a href="Hauptgruppe.xml?xpath=/{http://www.mbsim-env.de/MBSim}Group[1]/{http://www.mbsim-env.de/MBSim}groups[1]/{http://www.mbsim-env.de/MBXMLUtils}Embed[2]&amp;line=38">Hauptgruppe.xml:38:/Group[1]/groups[1]/p:Embed[2]</a>:<br/><span class="MBXMLUTILS_MSG">included from here
</span></span><span class="MBXMLUTILS_ERROROUTPUT MBXMLUTILS_SSE"><a href="MBS.mbsim.xml?xpath=/{http://www.mbsim-env.de/MBSim}DynamicSystemSolver[1]/{http://www.mbsim-env.de/MBSim}groups[1]/{http://www.mbsim-env.de/MBXMLUtils}Embed[1]&amp;ecount=1&amp;line=18">MBS.mbsim.xml:18:/DynamicSystemSolver[1]/groups[1]/p:Embed[1]</a>:<br/><span class="MBXMLUTILS_MSG">included from here
</span></span><span class="MBXMLUTILS_ERROROUTPUT MBXMLUTILS_SSE"><a href="MBS.mbsx?xpath=/{http://www.mbsim-env.de/MBXMLUtils}Embed[1]/{http://www.mbsim-env.de/MBSimXML}MBSimProject[1]/{http://www.mbsim-env.de/MBXMLUtils}Embed[1]&amp;ecount=1&amp;line=8">MBS.mbsx:8:/p:Embed[1]/mx:MBSimProject[1]/p:Embed[1]</a>:<br/><span class="MBXMLUTILS_MSG">included from here</span></span>
